<resources>
    <string name="app_name" translatable="false">E-Tester</string>
    <string name="login_label">Login</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="question">Question</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="answer_5">Answer 5</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="insert">Insert</string>
    <string name="create">Create</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="download">Download</string>
    <string name="email">Email</string>
    <string name="registration_show_password">Show password</string>
    <string name="surname">Surname</string>
    <string name="choose">Choose</string>
    <string name="end">End</string>
    <string name="settings">Settings</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="changed_to_ukrainian">Changed to ukrainian</string>
    <string name="changed_to_russian">Changed to russian</string>
    <string name="changed_to_english">Changed to english</string>
    <string name="no_internet">No internet connection!</string>
    <string name="no_tests">Tests not found!</string>
    <string name="not_inserted">Data not inserted!</string>
    <string name="inserted">Data inserted</string>
    <string name="cant_be_empty">An empty answer can`t be the correct!</string>
    <string name="choose_correct">Choose correct answer!</string>
    <string name="not_ready">Haven`t done yet(</string>
    <string name="named_test">Test named</string>
    <string name="your_result">Your result!</string>
    <string name="failed">Failed!</string>
    <string name="registered">Registered</string>
    <string name="logged">Logged</string>
    <string name="id_number">Your ID</string>
    <string name="first_or_second_not_filled">First or second may be empty!</string>
    <string name="third_empty">Third field is empty!</string>
    <string name="fourth_empty">Forth field is empty!</string>
    <string name="online">Online</string>
    <string name="local">Local</string>
    <string name="no_tests_online">No online tests!</string>
    <string name="no_tests_local">No local test!</string>
    <string name="choose_location">Choose location</string>
    <string name="choose_test">Choose test!</string>
</resources>
