<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/english"
            app:showAsAction="always"
            android:title="@string/english"
            android:icon="@drawable/us">
        </item>
        <item
            android:icon="@drawable/ru"
            app:showAsAction="always"
            android:id="@+id/russian"
            android:title="@string/russian">
        </item>
        <item
            android:icon="@drawable/ua"
            app:showAsAction="always"
            android:id="@+id/ukrainian"
            android:title="@string/ukrainian">
        </item>
        </group>
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings">
    </item>
</menu>