<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <Button
            android:id="@+id/create"
            android:layout_width="@dimen/middle_weight_size"
            android:layout_height="@dimen/middle_height_size"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/create"
            android:onClick="goCreate"
            />
        <Button
            android:id="@+id/download"
            android:layout_width="@dimen/middle_weight_size"
            android:layout_height="@dimen/middle_height_size"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_above="@id/create"
            android:text="@string/download"
            android:onClick="goDownload"
            />
        <Button
            android:id="@+id/start"
            android:layout_width="@dimen/middle_weight_size"
            android:layout_height="@dimen/middle_height_size"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/create"
            android:text="@string/start"
            android:onClick="goChoose"
            />
</RelativeLayout>