<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/login_label"
            android:layout_width="@dimen/middle_weight_size"
            android:layout_height="@dimen/middle_height_size"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="40sp"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="@dimen/middle_weight_size"
            android:layout_height="@dimen/middle_height_size"
            android:layout_below="@id/login_label"
            android:hint="@string/username"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/middle_weight_size"
            android:layout_height="@dimen/middle_height_size"
            android:layout_below="@id/username"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/login_button"
            android:layout_width="@dimen/middle_weight_size"
            android:layout_height="@dimen/middle_height_size"
            android:layout_below="@id/password"
            android:text="@string/login"
            android:onClick="onLogin"
            />
        <TextView
            android:id="@+id/register"
            android:layout_width="@dimen/middle_weight_size"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_button"
            android:text="@string/register"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:onClick="onRegister"
            />
    </RelativeLayout>
    </RelativeLayout>
