<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/scrollview"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:isScrollContainer="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <EditText
        android:id="@+id/question"
        android:hint="@string/question"
        android:layout_width="@dimen/large_weight_size"
        android:layout_height="@dimen/large_height_size"
        android:layout_centerHorizontal="true"/>
    <RelativeLayout
        android:id="@+id/answer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:id="@+id/text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/answer_1"
                android:layout_width="@dimen/middle_weight_size"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/middle_height_size"
                android:inputType="text"
                android:hint="@string/answer_1" />
            <EditText
                android:id="@+id/answer_2"
                android:layout_width="@dimen/middle_weight_size"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/middle_height_size"
                android:layout_below="@id/answer_1"
                android:inputType="text"
                android:hint="@string/answer_2"/>
            <EditText
                android:id="@+id/answer_3"
                android:layout_width="@dimen/middle_weight_size"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/middle_height_size"
                android:layout_below="@id/answer_2"
                android:inputType="text"
                android:visibility="gone"
                android:hint="@string/answer_3" />
            <EditText
                android:id="@+id/answer_4"
                android:layout_width="@dimen/middle_weight_size"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/middle_height_size"
                android:layout_below="@id/answer_3"
                android:inputType="text"
                android:visibility="gone"
                android:hint="@string/answer_4" />
            <EditText
                android:id="@+id/answer_5"
                android:layout_width="@dimen/middle_weight_size"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/middle_height_size"
                android:layout_below="@id/answer_4"
                android:inputType="text"
                android:visibility="gone"
                android:hint="@string/answer_5" />
            <Button
                android:id="@+id/add_3"
                android:layout_width="@dimen/small_weight_size"
                android:layout_height="@dimen/small_weight_size"
                android:layout_below="@id/answer_2"
                android:layout_centerHorizontal="true"
                style="@style/add_button"
                android:tag="add_3"
                android:onClick="addField"/>
            <Button
                android:id="@+id/add_4"
                android:layout_width="@dimen/small_weight_size"
                android:layout_height="@dimen/small_weight_size"
                android:layout_below="@id/answer_3"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                style="@style/add_button"
                android:tag="add_4"
                android:onClick="addField"/>
            <Button
                android:id="@+id/add_5"
                android:layout_width="@dimen/small_weight_size"
                android:layout_height="@dimen/small_weight_size"
                android:layout_below="@id/answer_4"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                style="@style/add_button"
                android:tag="add_5"
                android:onClick="addField"/>
            <Button
                android:id="@+id/minus_3"
                android:layout_width="@dimen/small_weight_size"
                android:layout_height="@dimen/small_weight_size"
                android:layout_below="@id/answer_3"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:layout_toEndOf="@id/add_4"
                android:layout_toRightOf="@id/add_4"
                style="@style/minus_button"
                android:tag="minus_3"
                android:onClick="addField"/>
            <Button
                android:id="@+id/minus_4"
                android:layout_width="@dimen/small_weight_size"
                android:layout_height="@dimen/small_weight_size"
                android:layout_below="@id/answer_4"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@id/add_5"
                android:layout_toRightOf="@id/add_5"
                android:visibility="gone"
                style="@style/minus_button"
                android:tag="minus_4"
                android:onClick="addField"/>
            <Button
                android:id="@+id/minus_5"
                android:layout_width="@dimen/small_weight_size"
                android:layout_height="@dimen/small_weight_size"
                android:layout_below="@id/answer_5"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                style="@style/minus_button"
                android:tag="minus_5"
                android:onClick="addField"/>

        </RelativeLayout>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_layout"
            android:layout_toRightOf="@id/text_layout">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/middle_height_size"
                android:id="@+id/answer_t1"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/middle_height_size"
                android:id="@+id/answer_t2"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/middle_height_size"
                android:id="@+id/answer_t3"
                android:layout_weight="1"
                android:visibility="gone"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/middle_height_size"
                android:id="@+id/answer_t4"
                android:visibility="gone"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/middle_height_size"
                android:id="@+id/answer_t5"
                android:visibility="gone"
                android:layout_weight="1" />
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer_layout"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/next"
            android:layout_width="80pt"
            android:layout_height="30pt"
            android:text="@string/insert"
            android:onClick="addData"
            />
        <Button
            android:id="@+id/finish"
            android:layout_width="80pt"
            android:layout_height="30pt"
            android:layout_toEndOf="@id/next"
            android:layout_toRightOf="@id/next"
            android:text="@string/finish"
            android:onClick="onFinish"/>
    </RelativeLayout>



</RelativeLayout>
    </ScrollView>